--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Ashish Anand",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
-    "mongoose": "^9.0.2"
+    "mongoose": "^9.0.2",
+    "validator": "^13.15.26"
   }
 }
